[gd_scene load_steps=7 format=2]

[ext_resource path="res://utils/Dialog.gd" type="Script" id=1]
[ext_resource path="res://fonts/Button_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://utils/dialog_box.png" type="Texture" id=3]
[ext_resource path="res://tests/Theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/Dialog_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/Dialog_name_font.tres" type="DynamicFont" id=6]

[node name="Dialogo" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Voice" type="AudioStreamPlayer" parent="."]
volume_db = -17.0

[node name="Label" type="Label" parent="."]
margin_left = 320.675
margin_top = 327.356
margin_right = 360.675
margin_bottom = 351.356
custom_fonts/font = ExtResource( 2 )
text = "En proceso"

[node name="SlideDown" type="Tween" parent="."]

[node name="Panel" type="Sprite" parent="."]
position = Vector2( 496.32, 509.325 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 46, 115.038, 292, 64 )

[node name="Dialog" type="Label" parent="Panel"]
margin_left = -88.0
margin_top = -18.0
margin_right = 108.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "test"

[node name="SlowText" type="Timer" parent="Panel"]
wait_time = 0.04
autostart = true

[node name="Nombre" type="Label" parent="Panel"]
margin_left = -140.917
margin_top = -40.8997
margin_right = 71.083
margin_bottom = -22.8997
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.65098, 0.341176, 0.694118, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "nombre"

[node name="Status" type="Label" parent="Panel"]
margin_left = 83.3003
margin_top = 13.28
margin_right = 123.3
margin_bottom = 43.28
custom_fonts/font = ExtResource( 5 )

[connection signal="tween_completed" from="SlideDown" to="." method="_on_SlideDown_tween_completed"]
[connection signal="timeout" from="Panel/SlowText" to="." method="Letra_a_letra"]
